src/test/fixtures/kphp_functions/not_support_functions_with_namespace-3.fixture.php
<?php

use function Ns1\end;
use function Ns1\end as reset;

$arr = [];

end($arr);
reset($arr);
<error descr="KPHP does not support reset()">\reset($arr)</error>;
<error descr="KPHP does not support end()">\end($arr)</error>;
